# HallmarksSearchTools

./: CMakeLists.txt  README.md  logo_idea.html
.circleci/: config.yml
main/: main.cpp
src/: Constants.h  Hallmark.cpp  Hallmark.h  MatrixManager.cpp  MatrixManager.h  Paper.cpp  Paper.h  Structs.h  Timer.cpp  Timer.h  WordHistogram.cpp  WordHistogram.h
unit_tests/: PaperTests.cpp
